# simple-cmake

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  pyproject.toml
Exe1/: main.cpp
LibA/include/LibA/: ClassA1.h  ClassA4.h  ClassA5.h  ClassA7.h  ClassA8.h
LibA/src/: ClassA1.cpp  ClassA10.cpp  ClassA2.cpp  ClassA3.cpp  ClassA4.cpp  ClassA5.cpp  ClassA6.cpp  ClassA7.cpp  ClassA8.cpp  ClassA9.cpp
LibB/: CMakeLists.txt
LibB/include/LibB/: ClassB10.h  ClassB2.h  ClassB5.h  ClassB7.h  ClassB8.h
LibB/src/: ClassB1.cpp  ClassB10.cpp  ClassB2.cpp  ClassB3.cpp  ClassB5.cpp  ClassB6.cpp  ClassB7.cpp  ClassB8.cpp  ClassB9.cpp
profiles/: x86_64-pc-linux-gnu.profile
src/: CMakeGraphVizOptions.cmake  CMakeLists.txt
src/Custom1/: CMakeLists.txt
src/Exe1/: CMakeLists.txt  main.cpp
src/LibA/: CMakeLists.txt
src/LibA/include/LibA/: ClassA10.h  ClassA2.h  ClassA3.h  ClassA6.h  ClassA9.h
src/LibA/src/: ClassA1.cpp  ClassA2.cpp  ClassA3.cpp  ClassA6.cpp  ClassA9.cpp
src/LibB/: CMakeLists.txt
src/LibB/include/LibB/: ClassB1.h  ClassB3.h  ClassB4.h  ClassB6.h  ClassB9.h  CommonClass.h
src/LibB/src/: ClassB10.cpp  ClassB4.cpp  ClassB5.cpp  ClassB9.cpp  CommonClass.cpp
src/LibC/: CMakeLists.txt
src/LibC/include/LibC/: ClassC1.h  CommonClass.h
src/LibC/src/: ClassC1.cpp  CommonClass.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  test_package.cpp
