[project]
name = "simple-cmake"
version = "0.1.0"
description = ""
authors = [
    {name = "Klaus Holst Jacobsen",email = "klaus.holst.jacobsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
conan = "2.21.0"
cmake = "4.0.2"
